Ensure button group correctly abides by height definition, but maintains ability to wrap content

--- a/ui/src/stylesheets/common.css
+++ b/ui/src/stylesheets/common.css
@@ -149,6 +149,7 @@ main {
 /* Ensure we overflow if template extends beyond widget's defined height */
 .nrdb-ui-widget.nrdb-ui-markdown,
 .nrdb-ui-widget.nrdb-ui-form,
+.nrdb-ui-widget.nrdb-ui-button-group,
 .nrdb-ui-widget.nrdb-ui-template {
     overflow-y: auto;
 }
